--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE=mongodb://localhost:27017/fuelapp
+DATABASE=mongodb+srv://Geeth:geeth@123@cluster0.rqzwuat.mongodb.net/?retryWrites=true&w=majority
