add mongodn atlas

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE=mongodb+srv://Geeth:geeth@123@cluster0.rqzwuat.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Geeth:geeth123@cluster0.rqzwuat.mongodb.net/test
